--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <h1>Client-side URL change examples</h1>
       <nav style="display: flex; justify-content: space-around">
         <a href="/">Home</a>
-        <a href="/contacts">Contacts</a>
-        <a href="/about">About</a>
-        <a href="/about/us">About / Us</a>
+        <a href="otus--hw36-router/contacts">Contacts</a>
+        <a href="otus--hw36-router/about">About</a>
+        <a href="otus--hw36-router/about/us">About / Us</a>
       </nav>
     </header>
     <article id="root"></article>
