--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
       <h1>Client-side URL change examples</h1>
       <nav style="display: flex; justify-content: space-around">
-        <a href="/">Home</a>
-        <a href="otus--hw36-router/contacts">Contacts</a>
-        <a href="otus--hw36-router/about">About</a>
-        <a href="otus--hw36-router/about/us">About / Us</a>
+        <a href="/otus--hw36-router">Home</a>
+        <a href="/otus--hw36-router/contacts">Contacts</a>
+        <a href="/otus--hw36-router/about">About</a>
+        <a href="/otus--hw36-router/about/us">About / Us</a>
       </nav>
     </header>
     <article id="root"></article>
